--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_2.jpg);"></a>
+   								<a href="Ngan-xep-cong-nghe-MarTech-Stack.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_2.jpg);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
@@ -104,7 +104,7 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/xu-huong-martech.png);"></a>
+   								<a href="Ai-MarTech.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/xu-huong-martech.png);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
@@ -125,7 +125,7 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single1.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/2.jpg);"></a>
+   								<a href="Push-Notification-Pushtimize.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/2.jpg);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
@@ -146,7 +146,7 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/1.jpg);"></a>
+   								<a href="Marketing-Automation-2020.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/1.jpg);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
@@ -167,12 +167,12 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/crm-la-gi.png);"></a>
+   								<a href="CRM-la-gi.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/crm-la-gi.png);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
    									<span class="subheading">MarTech</span>
-   									<h2><a href="blog-single.html">Hiểu về quản lý quan hệ khách hàng (CRM)</a></h2>
+   									<h2><a href="CRM-la-gi.html">Hiểu về quản lý quan hệ khách hàng (CRM)</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -188,12 +188,12 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/cdp-la-gi.jpg);"></a>
+   								<a href="cdp-la-gi.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/cdp-la-gi.jpg);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
    									<span class="subheading">MarTech</span>
-   									<h2><a href="blog-single.html">CDP (Customer Data Platform) là gì?</a></h2>
+   									<h2><a href="cdp-la-gi.html">CDP (Customer Data Platform) là gì?</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -209,7 +209,7 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/xu-huong-martech.png);"></a>
+   								<a href="xu-huong-martech.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/xu-huong-martech.png);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
@@ -230,12 +230,12 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/pasted image 0.png);"></a>
+   								<a href="martech-covid-19.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/pasted image 0.png);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
    									<span class="subheading">MarTech</span>
-   									<h2><a href="blog-single.html">MarTech trong bối cảnh Covid-19</a></h2>
+   									<h2><a href="martech-covid-19.html">MarTech trong bối cảnh Covid-19</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -251,7 +251,7 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_2.jpg);"></a>
+   								<a href="martech-la-gi.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_2.jpg);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
@@ -307,9 +307,9 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">latest News</h2>
               <div class="block-21 mb-4 d-flex">
-	              <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
+	              <a class="img mr-4 rounded" style="background-image: url(images/Data-Driven-Marketing.jpg);"></a>
 	              <div class="text">
-	                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+	                <h3 class="heading"><a href="Data-Driven-Marketing.html">Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị</a></h3>
 	                <div class="meta">
 	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
 	                  <div><a href="#"></span> Admin</a></div>
@@ -318,9 +318,9 @@
 	              </div>
 	            </div>
 	            <div class="block-21 mb-4 d-flex">
-	              <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
+	              <a class="img mr-4 rounded" style="background-image: url(images/2.gif);"></a>
 	              <div class="text">
-	                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+	                <h3 class="heading"><a href="Real-time-Marketing.html">Real-time Marketing</a></h3>
 	                <div class="meta">
 	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
 	                  <div><a href="#"></span> Admin</a></div>
