--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/ngan-xep-stack.jpg');">
+              <a href="Ngan-xep-cong-nghe-MarTech-Stack.html" class="block-20" style="background-image: url('images/ngan-xep-stack.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -92,7 +92,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/AI-martech-zone.jpg');">
+              <a href="Ai-MarTech.html" class="block-20" style="background-image: url('images/AI-martech-zone.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -112,7 +112,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/2.jpg');">
+              <a href="Push-Notification-Pushtimize.html" class="block-20" style="background-image: url('images/2.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -134,7 +134,7 @@
 
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/1.jpg');">
+              <a href="Marketing-Automation-2020.html" class="block-20" style="background-image: url('images/1.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -154,7 +154,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/crm-la-gi.png');">
+              <a href="CRM-la-gi.html" class="block-20" style="background-image: url('images/crm-la-gi.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -174,7 +174,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/cdp-la-gi.jpg');">
+              <a href="cdp-la-gi.html" class="block-20" style="background-image: url('images/cdp-la-gi.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -195,7 +195,7 @@
 
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-            <a href="blog-single.html" class="block-20" style="background-image: url('images/xu-huong-martech.png');">
+            <a href="xu-huong-martech.html" class="block-20" style="background-image: url('images/xu-huong-martech.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -215,7 +215,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/pasted image 0.png');">
+              <a href="martech-covid-19.html" class="block-20" style="background-image: url('images/pasted image 0.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -235,7 +235,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+              <a href="martech-la-gi.html" class="block-20" style="background-image: url('images/image_2.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -290,20 +290,20 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">latest News</h2>
               <div class="block-21 mb-4 d-flex">
-	              <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
-	              <div class="text">
-	                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-	                <div class="meta">
-	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
-	                  <div><a href="#"></span> Admin</a></div>
-	                  <div><a href="#"></span> 19</a></div>
-	                </div>
-	              </div>
-	            </div>
-	            <div class="block-21 mb-4 d-flex">
-	              <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
-	              <div class="text">
-	                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+                <a class="img mr-4 rounded" style="background-image: url(images/Data-Driven-Marketing.jpg);"></a>
+                <div class="text">
+                  <h3 class="heading"><a href="Data-Driven-Marketing.html">Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị</a></h3>
+                  <div class="meta">
+                    <div><a href="#"></span> Oct. 16, 2019</a></div>
+                    <div><a href="#"></span> Admin</a></div>
+                    <div><a href="#"></span> 19</a></div>
+                  </div>
+                </div>
+              </div>
+              <div class="block-21 mb-4 d-flex">
+                <a class="img mr-4 rounded" style="background-image: url(images/2.gif);"></a>
+                <div class="text">
+                  <h3 class="heading"><a href="Real-time-Marketing.html">Real-time Marketing</a></h3>
 	                <div class="meta">
 	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
 	                  <div><a href="#"></span> Admin</a></div>
