--- a/Ngan-xep-cong-nghe-MarTech-Stack.html
+++ b/Ngan-xep-cong-nghe-MarTech-Stack.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v8.0" nonce="u95nhq8L"></script>
     
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
@@ -105,26 +107,7 @@ Công nghệ tiếp thị, hay MarTech, mang ý tưởng về ngăn xếp đến
               </div>
             </div>
 
-            <div class="pt-5 mt-5">
-              <h3 class="mb-5">2 Comments</h3>
-              <ul class="comment-list">
-                <li class="comment">
-                  <div class="comment-body">
-                    <h3>Uyên</h3>
-                    <div class="meta mb-3">October 10, 2020 at 2:21 pm</div>
-                    <p>Tuyệt vời!!! Một bài viết xuất sắc!!!</p>
-                    <p><a href="#" class="reply">Reply</a></p>
-                  </div>
-                    </li>
-                     <li class="comment">
-                  <div class="comment-body">
-                    <h3>Linh Thuy Tran</h3>
-                    <div class="meta mb-3">October 10, 2020 at 2:25 pm</div>
-                    <p>Thật là một bài viết hữu ích.</p>
-                    <p><a href="#" class="reply">Reply</a></p>
-                  </div>
-                </li>
-              </ul>
+<div class="fb-comments" data-href="https://martechzonez.github.io/Ngan-xep-cong-nghe-MarTech-Stack.html" data-numposts="5" data-width=""></div>
               <!-- END comment-list -->
               
               <div class="comment-form-wrap pt-5">
