--- a/Ngan-xep-cong-nghe-MarTech-Stack.html
+++ b/Ngan-xep-cong-nghe-MarTech-Stack.html
@@ -106,11 +106,12 @@ Công nghệ tiếp thị, hay MarTech, mang ý tưởng về ngăn xếp đến
                 <a href="#" class="tag-cloud-link">Technology</a>
               </div>
             </div>
+<div class="pt-5 mt-5">
 
 <div class="fb-comments" data-href="https://martechzonez.github.io/Ngan-xep-cong-nghe-MarTech-Stack.html" data-numposts="5" data-width=""></div>
               <!-- END comment-list -->
-              
-              
+
+          </div> <!-- .col-md-8 -->
           <div class="col-lg-4 sidebar pl-lg-5 ftco-animate">
             <div class="sidebar-box">
               <form action="#" class="search-form">
