--- a/Ngan-xep-cong-nghe-MarTech-Stack.html
+++ b/Ngan-xep-cong-nghe-MarTech-Stack.html
@@ -106,13 +106,38 @@ Công nghệ tiếp thị, hay MarTech, mang ý tưởng về ngăn xếp đến
                 <a href="#" class="tag-cloud-link">Technology</a>
               </div>
             </div>
-<div class="pt-5 mt-5">
-  <div class="comment-form-wrap pt-5">
 
 <div class="fb-comments" data-href="https://martechzonez.github.io/Ngan-xep-cong-nghe-MarTech-Stack.html" data-numposts="5" data-width=""></div>
-<div class="comment-form-wrap pt-5">
               <!-- END comment-list -->
-</div>
+              
+              <div class="comment-form-wrap pt-5">
+                <h3 class="mb-5">Leave a comment</h3>
+                <form action="#" class="p-5 bg-light">
+                  <div class="form-group">
+                    <label for="name">Name *</label>
+                    <input type="text" class="form-control" id="name">
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email *</label>
+                    <input type="email" class="form-control" id="email">
+                  </div>
+                  <div class="form-group">
+                    <label for="website">Website</label>
+                    <input type="url" class="form-control" id="website">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
+                  </div>
+                  <div class="form-group">
+                    <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
+                  </div>
+
+                </form>
+              </div>
+            </div>
+
           </div> <!-- .col-md-8 -->
           <div class="col-lg-4 sidebar pl-lg-5 ftco-animate">
             <div class="sidebar-box">
@@ -123,7 +148,53 @@ Công nghệ tiếp thị, hay MarTech, mang ý tưởng về ngăn xếp đến
                 </div>
               </form>
             </div>
-            
+            <div class="sidebar-box ftco-animate">
+              <div class="categories">
+                <h3>Categories</h3>
+                <li><a href="#">Marketing <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Technology <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Marketing Analyst <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Email Marketing <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Chưa nghĩ ra <span class="ion-ios-arrow-forward"></span></a></li>
+              </div>
+            </div>
+
+            <div class="sidebar-box ftco-animate">
+              <h3>Recent Blog</h3>
+              <div class="block-21 mb-4 d-flex">
+                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+                <div class="text">
+                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+                  <div class="meta">
+                    <div><a href="#"><span class="icon-calendar"></span> Nov. 14, 2019</a></div>
+                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                  </div>
+                </div>
+              </div>
+              <div class="block-21 mb-4 d-flex">
+                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+                <div class="text">
+                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+                  <div class="meta">
+                    <div><a href="#"><span class="icon-calendar"></span> Nov. 14, 2019</a></div>
+                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                  </div>
+                </div>
+              </div>
+              <div class="block-21 mb-4 d-flex">
+                <a class="blog-img mr-4" style="background-image: url(images/image_3.jpg);"></a>
+                <div class="text">
+                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+                  <div class="meta">
+                    <div><a href="#"><span class="icon-calendar"></span> Nov. 14, 2019</a></div>
+                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
 
             <div class="sidebar-box ftco-animate">
               <h3>Tag Cloud</h3>
