--- a/Ai-MarTech.html
+++ b/Ai-MarTech.html
@@ -25,7 +25,7 @@
   <body>
 
     <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v8.0" nonce="PizuP6BU"></script>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v8.0" nonce="H0OCcv72"></script>
     
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
@@ -95,7 +95,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Ai-MarTech.html" data-numposts="10000" data-width=""></div>
+            <div class="fb-comments" data-href="https://martechzonez.github.io/Ai-MarTech.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
