--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Trang chủ</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">MarTech</a></li>
-	          <li class="nav-item active"><a href="about.html" class="nav-link">Team</a></li>
+	          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
 	        </ul>
 	      </div>
@@ -116,7 +116,7 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">While there's life, there'is hope.</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
@@ -212,9 +212,9 @@
 	              <div class="text">
 	                <h3 class="heading"><a href="#">MarTech là gì?</a></h3>
 	                <div class="meta">
-	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
+	                  <div><a href="#"></span> Oct. 16, 2020</a></div>
 	                  <div><a href="#"></span> Admin</a></div>
-	                  <div><a href="#"></span> 19</a></div>
+	                  
 	                </div>
 	              </div>
 	            </div>
@@ -223,9 +223,9 @@
 	              <div class="text">
 	                <h3 class="heading"><a href="#">Xu hướng MarTech trong năm 2020</a></h3>
 	                <div class="meta">
-	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
+	                  <div><a href="#"></span> Oct. 16, 2020</a></div>
 	                  <div><a href="#"></span> Admin</a></div>
-	                  <div><a href="#"></span> 19</a></div>
+	                 
 	                </div>
 	              </div>
 	            </div>
