--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item active"><a href="blog.html" class="nav-link">MarTech</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">Team</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
 	        </ul>
 	      </div>
@@ -85,7 +85,7 @@
               		</div>
               	</div>
               	<h3 class="heading mb-3"><a href="Ngan-xep-cong-nghe-MarTech-Stack.html">MarTech Stack là gì và làm cách nào để xây dựng một ngăn xếp công nghệ</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Thuật ngữ 'ngăn xếp' đã được sử dụng trong ngành công nghệ trong nhiều thập kỷ.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -100,12 +100,12 @@
               			<span class="day">18</span>
               		</div>
               		<div class="two pl-0 pr-3 py-2 align-self-stretch">
-              			<span class="yr">2019</span>
+              			<span class="yr">2020</span>
               			<span class="mos">October</span>
               		</div>
               	</div>
               	<h3 class="heading mb-3"><a href="Ai-MarTech.html">Xu hướng AI và MarTech - Doanh nghiệp có nên đầu tư?</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>AI đang dần len lỏi vào mọi ngành công nghiệp. Các doanh nghiệp rất mong muốn áp dụng nó nhờ vào khả năng tăng tốc quá trình,</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -120,13 +120,13 @@
               			<span class="day">18</span>
               		</div>
               		<div class="two pl-0 pr-3 py-2 align-self-stretch">
-              			<span class="yr">2019</span>
+              			<span class="yr">2020</span>
               			<span class="mos">October</span>
               		</div>
               	</div>
               	<h3 class="heading mb-3"><a href="Push-Notification-Pushtimize.html">Nền tảng Pushtimize và Thông báo đẩy - Push Notification
 </a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Chắc hẳn đâu đó bạn đã từng nghe nhắc đến thuật ngữ Marketing Technology (hoặc MarTech), vậy bạn có bao giờ tự hỏi rằng MarTech là gì?</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -142,12 +142,12 @@
               			<span class="day">18</span>
               		</div>
               		<div class="two pl-0 pr-3 py-2 align-self-stretch">
-              			<span class="yr">2019</span>
+              			<span class="yr">2020</span>
               			<span class="mos">October</span>
               		</div>
               	</div>
               	<h3 class="heading mb-3"><a href="Marketing-Automation-2020.html">Marketing Automation năm 2020</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Truyền thông và tiếp thị có mối liên kết rất chặt chẽ. Ngày nay, tự động hóa tiếp thị có thể hỗ trợ các chiến dịch,</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -162,12 +162,12 @@
               			<span class="day">18</span>
               		</div>
               		<div class="two pl-0 pr-3 py-2 align-self-stretch">
-              			<span class="yr">2019</span>
+              			<span class="yr">2020</span>
               			<span class="mos">October</span>
               		</div>
               	</div>
               	<h3 class="heading mb-3"><a href="CRM-la-gi.html">Hiểu về quản lý quan hệ khách hàng (CRM)</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>CRM mở rộng khái niệm tiếp thị cơ sở dữ liệu đến cấp độ khách hàng để phát triển các mối quan hệ từ công ty đến khách hàng có lợi nhuận</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -182,12 +182,12 @@
               			<span class="day">18</span>
               		</div>
               		<div class="two pl-0 pr-3 py-2 align-self-stretch">
-              			<span class="yr">2019</span>
+              			<span class="yr">2020</span>
               			<span class="mos">October</span>
               		</div>
               	</div>
               	<h3 class="heading mb-3"><a href="cdp-la-gi.html">CDP (Customer Data Platform) là gì?</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>CDP là nơi lưu trữ trung tâm cho dữ liệu khách hàng từ nhiều nguồn khác nhau.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -203,12 +203,12 @@
               			<span class="day">18</span>
               		</div>
               		<div class="two pl-0 pr-3 py-2 align-self-stretch">
-              			<span class="yr">2019</span>
+              			<span class="yr">2020</span>
               			<span class="mos">October</span>
               		</div>
               	</div>
               	<h3 class="heading mb-3"><a href="xu-huong-martech.html">Xu hướng Marketing Technology (MarTech) 2019-2020</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Hành vi và trải nghiệm trên các kênh Digital còn tác động đến quyết định mua hàng</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -223,12 +223,12 @@
               			<span class="day">18</span>
               		</div>
               		<div class="two pl-0 pr-3 py-2 align-self-stretch">
-              			<span class="yr">2019</span>
+              			<span class="yr">2020</span>
               			<span class="mos">October</span>
               		</div>
               	</div>
               	<h3 class="heading mb-3"><a href="martech-covid-19.html">MarTech trong bối cảnh Covid-19</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Toàn thế giới phải chịu sự ảnh hưởng mạnh mẽ của đại dịch toàn cầu - covid 19</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -243,12 +243,12 @@
               			<span class="day">18</span>
               		</div>
               		<div class="two pl-0 pr-3 py-2 align-self-stretch">
-              			<span class="yr">2019</span>
+              			<span class="yr">2020</span>
               			<span class="mos">October</span>
               		</div>
               	</div>
               	<h3 class="heading mb-3"><a href="martech-la-gi.html">MarTech là gì? | What is MarTech?</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -261,9 +261,7 @@
                 <li><a href="#">&lt;</a></li>
                 <li class="active"><span>1</span></li>
                 <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
+
                 <li><a href="#">&gt;</a></li>
               </ul>
             </div>
@@ -294,9 +292,9 @@
                 <div class="text">
                   <h3 class="heading"><a href="Data-Driven-Marketing.html">Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị</a></h3>
                   <div class="meta">
-                    <div><a href="#"></span> Oct. 16, 2019</a></div>
+                    <div><a href="#"></span> Oct. 16, 2020</a></div>
                     <div><a href="#"></span> Admin</a></div>
-                    <div><a href="#"></span> 19</a></div>
+                    
                   </div>
                 </div>
               </div>
@@ -305,9 +303,9 @@
                 <div class="text">
                   <h3 class="heading"><a href="Real-time-Marketing.html">Real-time Marketing</a></h3>
 	                <div class="meta">
-	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
+	                  <div><a href="#"></span> Oct. 16, 2020</a></div>
 	                  <div><a href="#"></span> Admin</a></div>
-	                  <div><a href="#"></span> 19</a></div>
+	                  
 	                </div>
 	              </div>
 	            </div>
@@ -319,7 +317,7 @@
               <ul class="list-unstyled">
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Home</a></li>
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>MarTech</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Team</a></li>
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>About</a></li>
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Liên hệ</a></li>
               </ul>
             </div>
@@ -330,8 +328,8 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">10 Trần Phú, Hà Đông, Hà Nội</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+088889999</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@martechzonez.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
