--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Readit - Free Bootstrap 4 Template by Colorlib</title>
+    <title>MarTech Zone | Cuộc chạy đua của tương lai</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -26,17 +26,17 @@
     
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Read<i>it</i>.</a>
+	      <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Articles</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">Team</a></li>
-	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item"><a href="index.html" class="nav-link">Trang chủ</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">MarTech</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+	          <li class="nav-item active"><a href="contact.html" class="nav-link">Liên hệ</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -63,16 +63,16 @@
           </div>
           <div class="w-100"></div>
           <div class="col-md-3">
-            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+            <p><span>Address:</span> 10 Trần Phú, Hà Đông, Hà Nội</p>
           </div>
           <div class="col-md-3">
-            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+            <p><span>Phone:</span> <a href="tel://1234567920">+ 08888 9999</a></p>
           </div>
           <div class="col-md-3">
-            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@martechzone.com</a></p>
           </div>
           <div class="col-md-3">
-            <p><span>Website</span> <a href="#">yoursite.com</a></p>
+            <p><span>Website</span> <a href="#">martechzonez.com</a></p>
           </div>
         </div>
         <div class="row block-9 no-gutters">
@@ -109,8 +109,8 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="logo"><a href="#">Read<span>it</span>.</a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="logo"><a href="#">MarTech<span>Zone</span>.</a></h2>
+              <p>"Technology must become part of marketing's DNA" - Scott Brinke</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -122,48 +122,46 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">latest News</h2>
               <div class="block-21 mb-4 d-flex">
-	              <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
-	              <div class="text">
-	                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-	                <div class="meta">
-	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
-	                  <div><a href="#"></span> Admin</a></div>
-	                  <div><a href="#"></span> 19</a></div>
-	                </div>
-	              </div>
-	            </div>
-	            <div class="block-21 mb-4 d-flex">
-	              <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
-	              <div class="text">
-	                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-	                <div class="meta">
-	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
-	                  <div><a href="#"></span> Admin</a></div>
-	                  <div><a href="#"></span> 19</a></div>
-	                </div>
-	              </div>
-	            </div>
+                <a class="img mr-4 rounded" style="background-image: url(images/Data-Driven-Marketing.jpg);"></a>
+                <div class="text">
+                  <h3 class="heading"><a href="Data-Driven-Marketing.html">Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị</a></h3>
+                  <div class="meta">
+                    <div><a href="#"></span> Oct. 16, 2020</a></div>
+                    <div><a href="#"></span> Admin</a></div>
+                  </div>
+                </div>
+              </div>
+              <div class="block-21 mb-4 d-flex">
+                <a class="img mr-4 rounded" style="background-image: url(images/2.gif);"></a>
+                <div class="text">
+                  <h3 class="heading"><a href="Real-time-Marketing.html">Real-time Marketing</a></h3>
+                  <div class="meta">
+                    <div><a href="#"></span> Oct. 16, 2020</a></div>
+                    <div><a href="#"></span> Admin</a></div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Home</a></li>
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Trang chủ</a></li>
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>MarTech</a></li>
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>About</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Articles</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Contact</a></li>
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Liên hệ</a></li>
               </ul>
             </div>
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+              <h2 class="ftco-heading-2">Have a Questions?</h2>
+              <div class="block-23 mb-3">
+                <ul>
+                  <li><span class="icon icon-map-marker"></span><span class="text">10 Trần Phú, Hà Đông, Hà Nội</span></li>
+                  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+088889999</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@martechzone.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -173,7 +171,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | MarTech Zone Blog <i class="icon-heart color-danger" aria-hidden="true"></i> 
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
