--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Trang chủ</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">MarTech</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">Chia sẻ</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
 	        </ul>
 	      </div>
@@ -95,7 +95,7 @@
 			                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 			              </ul>
    									<div class="meta">
-   										<p class="mb-0"><a href="#">11/13/2019</a> | <a href="#">12 min read</a></p>
+   										<p class="mb-0"><a href="#">11/13/2020</a> 
    									</div>
    								</div>
    							</div>
@@ -116,7 +116,7 @@
 			                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 			              </ul>
    									<div class="meta">
-   										<p class="mb-0"><a href="#">11/13/2019</a> | <a href="#">12 min read</a></p>
+   										<p class="mb-0"><a href="#">11/13/2020</a>
    									</div>
    								</div>
    							</div>
@@ -137,7 +137,7 @@
 			                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 			              </ul>
    									<div class="meta">
-   										<p class="mb-0"><a href="#">11/13/2019</a> | <a href="#">12 min read</a></p>
+   										<p class="mb-0"><a href="#">11/13/2020</a> 
    									</div>
    								</div>
    							</div>
@@ -158,7 +158,7 @@
 			                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 			              </ul>
    									<div class="meta">
-   										<p class="mb-0"><a href="#">11/13/2019</a> | <a href="#">12 min read</a></p>
+   										<p class="mb-0"><a href="#">11/13/2020</a> 
    									</div>
    								</div>
    							</div>
@@ -179,7 +179,7 @@
 			                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 			              </ul>
    									<div class="meta">
-   										<p class="mb-0"><a href="#">11/13/2019</a> | <a href="#">12 min read</a></p>
+   										<p class="mb-0"><a href="#">11/13/2020</a> 
    									</div>
    								</div>
    							</div>
@@ -200,7 +200,7 @@
 			                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 			              </ul>
    									<div class="meta">
-   										<p class="mb-0"><a href="#">11/13/2019</a> | <a href="#">12 min read</a></p>
+   										<p class="mb-0"><a href="#">11/13/2020</a> 
    									</div>
    								</div>
    							</div>
@@ -221,7 +221,7 @@
 			                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 			              </ul>
    									<div class="meta">
-   										<p class="mb-0"><a href="#">11/13/2019</a> | <a href="#">12 min read</a></p>
+   										<p class="mb-0"><a href="#">11/13/2020</a>
    									</div>
    								</div>
    							</div>
@@ -242,7 +242,7 @@
 			                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 			              </ul>
    									<div class="meta">
-   										<p class="mb-0"><a href="#">11/13/2019</a> | <a href="#">12 min read</a></p>
+   										<p class="mb-0"><a href="#">11/13/2020</a> 
    									</div>
    								</div>
    							</div>
@@ -263,7 +263,7 @@
 			                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 			              </ul>
    									<div class="meta">
-   										<p class="mb-0"><a href="#">11/13/2019</a> | <a href="#">12 min read</a></p>
+   										<p class="mb-0"><a href="#">11/13/2020</a> 
    									</div>
    								</div>
    							</div>
@@ -311,9 +311,8 @@
 	              <div class="text">
 	                <h3 class="heading"><a href="Data-Driven-Marketing.html">Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị</a></h3>
 	                <div class="meta">
-	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
+	                  <div><a href="#"></span> Oct. 16, 2020</a></div>
 	                  <div><a href="#"></span> Admin</a></div>
-	                  <div><a href="#"></span> 19</a></div>
 	                </div>
 	              </div>
 	            </div>
@@ -322,9 +321,8 @@
 	              <div class="text">
 	                <h3 class="heading"><a href="Real-time-Marketing.html">Real-time Marketing</a></h3>
 	                <div class="meta">
-	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
+	                  <div><a href="#"></span> Oct. 16, 2020</a></div>
 	                  <div><a href="#"></span> Admin</a></div>
-	                  <div><a href="#"></span> 19</a></div>
 	                </div>
 	              </div>
 	            </div>
@@ -336,7 +334,7 @@
               <ul class="list-unstyled">
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Trang chủ</a></li>
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>MarTech</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Team</a></li>
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>About</a></li>
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Liên hệ</a></li>
               </ul>
             </div>
@@ -347,7 +345,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">10 Trần Phú, Hà Đông, Hà Nội</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+088889999</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@martechzone.com</span></a></li>
 	              </ul>
 	            </div>
