--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
               			<span class="day">18</span>
               		</div>
               		<div class="two pl-0 pr-3 py-2 align-self-stretch">
-              			<span class="yr">2019</span>
+              			<span class="yr">2020</span>
               			<span class="mos">October</span>
               		</div>
               	</div>
@@ -260,7 +260,7 @@
               <ul>
                 <li><a href="#">&lt;</a></li>
                 <li class="active"><span>1</span></li>
-                <li><a href="#">2</a></li>
+                <li><a href="blog2.html">2</a></li>
 
                 <li><a href="#">&gt;</a></li>
               </ul>
