--- a/about.html
+++ b/about.html
@@ -68,9 +68,9 @@
     			<div class="col-md-6 pl-md-5 py-md-5">
     				<div class="row justify-content-start pt-3 pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		          	<span class="subheading">Welcome to Readit</span>
-		            <h2 class="mb-4">We give you the best articles you want.</h2>
-		            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+		          	<span class="subheading">Welcome to MarTech Zone</span>
+		            <h2 class="mb-4">We give you the best information about MarTech world.</h2>
+		            <p>"Technology must become part of marketing's DNA" - Scott Brinke</p>
 		            <div class="tabulation-2 mt-4">
 									<ul class="nav nav-pills nav-fill d-md-flex d-block">
 									  <li class="nav-item mb-md-0 mb-2">
@@ -85,13 +85,13 @@
 									</ul>
 									<div class="tab-content bg-light rounded mt-2">
 									  <div class="tab-pane container p-0 active" id="home1">
-									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  	<p>Nhiệm vụ của Martech Zone là tạo ra một sân chơi, một diễn đàn chuyên về Marketing để mọi người cùng nhau cập nhật kiến thức, trao đổi, tranh luận. Tạo ra một thế hệ Marketer toàn diện.</p>
 									  </div>
 									  <div class="tab-pane container p-0 fade" id="home2">
-									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  	<p>Chúng tôi hiểu được rằng , Marketing trong thời đại số ngày càng chiếm một vị trí quan trọng. Đặc biệt là Digital Marketing, để nắm bắt được xu hướng kịp thời, hiểu được những đổi mới trong thế giới Marketing, chúng tôi đưa đến cho bạn một trang Web tổng hợp thông tin chuyên về Marketing, chúng tôi sẽ là người đồng hành cùng bạn trên con đường chinh phục thế giới Marketing.</p>
 									  </div>
 									  <div class="tab-pane container p-0 fade" id="home3">
-									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  	<p>Tương lai của bạn đang trong tầm tay, hãy vươn tay ra thế giới.</p>
 									  </div>
 									</div>
 								</div>
